--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-dev src/index.ts"
+    "start": "node dist/index.js",  
+    "dev": "nodemon --watch src --exec ts-node src/index.ts", 
+    "build": "tsc"  
   },
   "keywords": [],
   "author": "",
@@ -19,6 +21,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/node": "^18.18.3"
+    "@types/node": "^18.18.3",
+    "nodemon": "^3.1.7"
   }
 }
