--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,21 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "3000:80"
+      - "80:80"
     depends_on:
       - backend
+    volumes:
+    - ./frontend:/app
+    - /app/node_modules
+    command: npm start
 
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
     ports:
-      - "5000:5000"
+      - "8080:8080"
+    volumes:
+    - ./backend:/app
+    - /app/node_modules
+    command: npm run dev 
