--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.4.0",
     "@types/cors": "^2.8.17",
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
