--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.4.0",
     "@types/cors": "^2.8.17",
+    "@types/mongoose": "^5.11.97",
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "mongoose": "^8.8.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   },
