--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,9 +25,18 @@ services:
       - "8080:8080"
     env_file:
       - .env
-    environment:
-      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
+    environment:       
+      - GOOGLE_API_KEY=${GOOGLE_API_KEY}      
     volumes:
     - ./backend:/app
     - /app/node_modules
     command: npm run dev 
+  mongodb:
+    image: mongo:latest
+    container_name: mongodb
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongodb_data:/data/db
+volumes:
+  mongodb_data:
