--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@react-google-maps/api": "^2.20.3",
     "@tanstack/react-query": "^5.61.4",
+    "@tanstack/react-table": "^8.20.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -23,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
+    "react-moment": "^1.1.3",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.15",
     "typescript": "^4.9.5",
