--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.3.0",
     "react-moment": "^1.1.3",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.14.5",
     "tailwindcss": "^3.4.15",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
