--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
     - /app/node_modules
     command: npm run dev 
   mongodb:
-    image: mongo:4.4
+    image: mongo:latest
     container_name: mongodb
     ports:
       - "27017:27017"
